migrate project to maven env