@@ -1,7 +1,6 @@
 # ProteinNetworkAnalysis
 
+For Maven:
 ```shell script
-> cd target/
-> export PATH_TO_FX=path/to/javafx-sdk-13/lib
-> java -jar --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml NetworkAnalysis.jar
+> mvn clean javafx:run
 ```
